<resources>
    <string name="app_name">X O Game</string>
    <string name="btn_one_player">One Player Game</string>
    <string name="btn_two_player">Two Player Game</string>
    <string name="btn_settings">Settings</string>
    <string name="game_board">Game Board</string>
    <string name="settings_fragment">Settings</string>
    <string name="dialog_message">Player %d is Winner!!</string>
    <string name="play_again">Play again</string>
    <string name="back">Back</string>
    <string name="player_turn">%s Turn</string>
    <string name="dialog_title">Wohooooo %s</string>
    <string name="tie_dialog_title">Ops %s</string>
    <string name="tie_dialog_message">It\'s Look Like a Tie</string>
    <string name="timer_txt">00:0%d</string>
    <string name="time_out_title">Sorry !!</string>
    <string name="time_out_message">Time is Out</string>
    <string name="language_btn">Language</string>
    <string name="sound_btn">Music</string>
    <string name="mute_btn">Mute</string>
    <string name="popup_title_txt">Please Select Your Language</string>
    <string name="done">Done</string>
</resources>