<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/settings_fragment"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.micheal.xogame.GameFragment"
        android:label="@string/game_board"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_gameFragment_self"
            app:destination="@id/gameFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.micheal.xogame.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_homeFragment_to_setFragment"
            app:destination="@id/setFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/setFragment"
        android:name="com.micheal.xogame.SetFragment"
        android:label="@string/settings_fragment"
        tools:layout="@layout/fragment_set">
        <action
            android:id="@+id/action_setFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_setFragment_self"
            app:destination="@id/setFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"
            app:popUpTo="@id/setFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>